--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,30 @@
     justify-content: center;
     align-items: center;
 }
+
+.hero.is-fullheight
+.hero-body {
+    align-items: flex-start;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* @media (max-width: 1024px) { .hero { background: black url(C:\Users\olive\Documents\UCF\Project-01\The-SpeakEasy-Project\assets\images\cosmopolitan-delish.jpg) center / cover; } }
+@media (max-width: 768px) { .hero { background: black url(C:\Users\olive\Documents\UCF\Project-01\The-SpeakEasy-Project\assets\images\cosmopolitan-delish.jpg) center / cover; } } */
+
+@media only screen and (max-width:800px) {
+  /* For tablets: */
+  .container {
+    width: 80%;
+    padding: 0;
+  }
+  .field {
+    width: 100%;
+  }
+}
+@media only screen and (max-width:500px) {
+  /* For mobile phones: */
+  .container {
+    width: 100%;
+  }
+}
