--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,9 @@ section {
   flex-direction: column;
 }
 
-/* .container {
-  max-width: 1344px;
-  margin-left: 100px;
-} */
-
-/* body {
-  position: relative;
-} */
+body {
+  margin-bottom: 0;
+}
 
 @media only screen and (max-width:800px) {
   /* For tablets: */
