--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -29,7 +29,7 @@ button {
 
 .heroine {
     background-color:white;
-    background-image: url("/assets/Images/Secret-Entrance-Within-The-Blue-Room-Los-Angeles-1200x800\ \(1\).jpg");
+    background-image: url("../../assets/Images/Secret-Entrance-Within-The-Blue-Room-Los-Angeles-1200x800\ \(1\).jpg");
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
