--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,47 +5,52 @@
 } */
 
 figure {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .hero 
 .hero-body {
-    align-items: flex-start;
-    display: flex;
-    justify-content: space-evenly;
-    
+  align-items: flex-start;
+  display: flex;
+  justify-content: space-evenly;
+  
 }
 
 section {
-    display: flex;
-    border: 5px solid goldenrod;
-    background-color: grey;
+  display: flex;
+  border: 5px solid goldenrod;
+  background-color: grey;
 }
 
 .columns:not(.is-desktop) {
-  display: flex;
-  flex-direction: column;
+display: flex;
+flex-direction: row;
 }
 
 body {
-  margin-bottom: 0;
+margin-bottom: 0;
 }
 
-@media only screen and (max-width:800px) {
-  /* For tablets: */
-  /* .container {
-    width: 80%;
-    padding: 0;
-  }
-   {
-    width: 100%;
-  }
+.small-video {
+margin-inline: 50px;
+margin-top: 20px;
+}
+/* 
+@media only screen and (max-width:800px) { */
+/* For tablets: */
+/* .container {
+  width: 80%;
+  padding: 0;
+}
+ {
+  width: 100%;
+}
 }  */
 
-@media only screen and (max-width:500px) {
-  /* For mobile phones: */
-  /* .container {
-    width: 100%;
-  }
+/* @media only screen and (max-width:500px) { */
+/* For mobile phones: */
+/* .container {
+  width: 100%;
+}
 } */
