--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,18 +9,59 @@ figure {
   justify-content: center;
 }
 
-.hero 
+h1 {
+  font-size: 50px;
+  color: 
+  
+}
+
+p {
+  text-align: justify;
+}
+.drinks {
+  height:200px;
+  margin-left:  110px;
+}
+
+.drinktitle {
+  text-align: center;
+}
+
+.oldfashioned {
+  height: 200px;
+  width: 200px;
+  margin-left: 80px;
+}
+
+.mojito {
+  height: 200px;
+  margin-left: 40px;
+}
+
+.hero {
+  background-color: rgba(0, 0, 0, 0.205);
+ 
+}
+
 .hero-body {
   align-items: flex-start;
   display: flex;
   justify-content: space-evenly;
+  background-color: rgba(0, 0, 0, 0.932);
+ 
   
 }
 
 section {
   display: flex;
-  border: 5px solid goldenrod;
-  background-color: grey;
+  border: 0;
+  background-image: url(/assets/Images/The-Skylark-night-1200.png);
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-blend-mode:multiply;
+  
 }
 
 .columns:not(.is-desktop) {
@@ -30,6 +71,11 @@ flex-direction: row;
 
 body {
 margin-bottom: 0;
+}
+
+.drinkIngr {
+
+  text-decoration: dotted;
 }
 
 .small-video {
