--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,10 @@ margin-bottom: 0;
 margin-inline: 50px;
 margin-top: 20px;
 }
+
+#anotherDrink {
+  display: none;
+}
 /* 
 @media only screen and (max-width:800px) { */
 /* For tablets: */
