Revert "fix link for background image on search.html"
This reverts commit 8dd86532452aac98f942d24ddbbc5e71eddb8169.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ p {
 section {
   display: flex;
   border: 0;
-  background-image: url(../../assets/images/The-Skylark-night-1200.png);
+  background-image: url(./assets/Images/The-Skylark-night-1200.png);
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
