--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -9,12 +9,19 @@ h1 {
     text-align: center;
 }
 
-p {
-    
-    text-align:center;
-    font-size: 60px;
+h2 {
+    font-size: 30px;
+    text-align: center;
 }
+
+h3 {
+    text-align: center;
+    font-size: ;
+}
+
+
 button {
+    margin-left: 350px;
     
 }
 
@@ -30,11 +37,10 @@ button {
 .heroine {
     background-color:white;
     background-image: url("../../assets/Images/Secret-Entrance-Within-The-Blue-Room-Los-Angeles-1200x800\ \(1\).jpg");
-    width: 100%;
-    height: 100%;
+    
     background-repeat: no-repeat;
     background-size:cover;
-    background-blend-mode:multiply;
+    background-blend-mode: luminosity;
     
     color:white;
     padding-top: 400px;
