--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@ h1 {
   
 }
 
+.box {
+  background-image: url(/assets/Images/top\ shelf\ choices\ fix.png);
+  background-repeat: no-repeat;
+  background-size:cover;
+  height:max-content;
+}
+
 p {
   text-align: justify;
 }
