--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -22,8 +22,23 @@ h3 {
 
 button {
     margin-left: 350px;
-    
+  
 }
+
+
+.custom-button-class {
+    background-color: rgb(60, 60, 60);
+    border: 1px black solid;
+    color: white;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 3px;
+    width: 255px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 
 .btn {
     display: inline-block;
