--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,13 @@ figure {
 
 h1 {
   font-size: 50px;
-  color: 
-  
 }
 
+
+.title {
+  font-size: 50px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
 .logo {
   font-size: 80px;
@@ -99,7 +102,6 @@ margin-top: 20px;
 
 .footer {
   color:white;
-  margin-bottom: ;
   padding-bottom: 50px;
   
 }
@@ -112,21 +114,37 @@ margin-top: 20px;
 #anotherDrink {
   display: none;
 }
-/* 
+ 
 
-@media only screen and (max-width:800px) { */
+.custom-button-class {
+  background-color: rgb(60, 60, 60);
+  border: 1px black solid;
+  color: white;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 3px;
+  width: 255px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
+@media only screen and (max-width:800px) {
 /* For tablets: */
  .container {
   width: 80%;
   padding: 0;
 }
- {
-  width: 100%;
-}  */
 
-@media only screen and (max-width:500px) { */
-/* For mobile phones: */
+ .body {
+  width: 100%;
+}  
+}
+@media only screen and (max-width:500px) {
+
   .container {
   width: 100%;
   }
 }
+
