top shelf recommedations to stack need to adjust the size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ section {
   background-repeat: no-repeat;
   background-size:cover;
   background-blend-mode:multiply;
+  flex-direction: column;
   
 }
 
