changed pina colada jpg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ html {
   transform-origin: bottom center;
 }
 .item:nth-child(9) {
-  background-image: url(../Images/__opt__aboutcom__coeus__resources__content_migration__liquor__2019__02__13090826__pina-colada-720x720-recipe-253f1752769447f6998afd2b9469c24e.webp);
+  background-image: url(../Images/Dash-of-Jazz-Pina-Colada-Margaritas-24.jpg);
   transform-origin: bottom right;
 }
 
